--- a/ci/batch/docker/Dockerfile
+++ b/ci/batch/docker/Dockerfile
@@ -16,7 +16,7 @@ FROM nvidia/cuda:10.1-cudnn7-devel-ubuntu18.04
           libxft-dev &&\
       rm -rf /var/lib/apt/lists/*
 
- RUN curl -o ~/miniconda.sh -O  https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh  && \
+ RUN curl -o ~/miniconda.sh -O  https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh  && \
       chmod +x ~/miniconda.sh && \
       ~/miniconda.sh -b -p /opt/conda && \
       rm ~/miniconda.sh && \
